# cEngine

./: .gitignore  CMakeLists.txt  README.md  log.txt
assets/materials/: test_material.cmat
assets/shaders/: Builtin.MaterialShader.frag  Builtin.MaterialShader.vert
example/: CMakeLists.txt
example/src/: game.c  game.h  main.c
src/: app.h  define.h  entry.h
src/containers/: darray.c  darray.h  hashtable.c  hashtable.h
src/core/: application.c  application.h  application_types.h  asserts.h  clock.c  clock.h  cmemory.c  cmemory.h  cstring.c  cstring.h  event.c  event.h  input.c  input.h  logger.c  logger.h
src/math/: cmath.c  cmath.h  math_types.h
src/memory/: linear_allocator.c  linear_allocator.h
src/platform/: filesystem.c  filesystem.h  platform.h  platform_linux.c
src/renderer/: renderer_backend.c  renderer_backend.h  renderer_frontend.c  renderer_frontend.h  renderer_types.inl
src/renderer/vulkan/: vulkan_backend.c  vulkan_backend.h  vulkan_buffer.c  vulkan_buffer.h  vulkan_command_buffer.c  vulkan_command_buffer.h  vulkan_device.c  vulkan_device.h  vulkan_fence.c  vulkan_fence.h  vulkan_framebuffer.c  vulkan_framebuffer.h  vulkan_image.c  vulkan_image.h  vulkan_pipeline.c  vulkan_pipeline.h  vulkan_platform.h  vulkan_renderpass.c  vulkan_renderpass.h  vulkan_shader_utils.c  vulkan_shader_utils.h  vulkan_swapchain.c  vulkan_swapchain.h  vulkan_types.inl
src/renderer/vulkan/shaders/: vulkan_material_shader.c  vulkan_material_shader.h  vulkan_object_shader.c  vulkan_object_shader.h
src/resources/: resource_types.h
src/resources/loaders/: binary_loader.c  image_loader.c  material_loader.c  material_loader.h  text_loader.c
src/shaders/: Builtin.ObjectShader.frag  Builtin.ObjectShader.vert  basic.vert
src/systems/: geometry_system.c  geometry_system.h  material_system.c  material_system.h  resource_system.c  resource_system.h  texture_system.c  texture_system.h
tests/: CMakeLists.txt
tests/src/: expect.h  main.c  test_manager.c  test_manager.h
tests/src/containers/: hashtable_tests.c
tests/src/core/: cstring_tests.c  cstring_tests.h
tests/src/memory/: linear_allocator_tests.c
